--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     body {
       font-family: 'Arial', sans-serif;
-      background-color: #000; /* Solid Black Background */
+      background-color: #000;
       color: white;
       overflow: hidden;
       display: flex;
@@ -175,4 +175,3 @@
 
 </body>
 </html>
-✅ What You Can Do N
