--- a/index.html
+++ b/index.html
@@ -32,6 +32,24 @@
       z-index: 10;
     }
 
+    .logo {
+      width: 150px;
+      height: auto;
+      margin: 0 auto 30px;
+      display: block;
+      background: linear-gradient(90deg, #FF0000, #FFFFFF, #FF0000);
+      background-size: 200% auto;
+      -webkit-mask-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAfQAAAH0CAYAAADL1t+KAAAACXBIWXMAAA7EAAAOxAGVKw4bAAAEwW...');
+      -webkit-mask-repeat: no-repeat;
+      -webkit-mask-position: center;
+      -webkit-mask-size: contain;
+      mask-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAfQAAAH0CAYAAADL1t+KAAAACXBIWXMAAA7EAAAOxAGVKw4bAAAEwW...');
+      mask-repeat: no-repeat;
+      mask-position: center;
+      mask-size: contain;
+      animation: gradientFade 3s ease-in-out infinite;
+    }
+
     .brand-name {
       font-size: 6em;
       font-weight: 800;
@@ -139,6 +157,8 @@
 <body>
 
 <div class="container">
+  <div class="logo"></div>
+
   <div class="brand-name">No Face Studio</div>
   <div class="subtitle">We’re building something bold and beautiful. Stay tuned!</div>
   <div class="countdown" id="countdown">
