--- a/index.html
+++ b/index.html
@@ -33,10 +33,12 @@
     .logo-wrapper {
       position: relative;
       width: 300px;
+      max-width: 80vw;
       margin: 0 auto 30px;
     }
     .logo-wrapper img {
       width: 100%;
+      height: auto;
       display: block;
       border-radius: 8px;
     }
@@ -109,6 +111,23 @@
       letter-spacing: 1px;
       opacity: 0.6;
       font-weight: 300;
+    }
+    @media (max-width: 480px) {
+      .brand-name {
+        font-size: 4em;
+        letter-spacing: 2px;
+      }
+      .subtitle {
+        font-size: 1.1em;
+        margin-bottom: 15px;
+      }
+      .countdown {
+        font-size: 1.7em;
+        padding: 10px 18px;
+      }
+      .footer {
+        font-size: 0.9em;
+      }
     }
   </style>
 </head>
