--- a/index.html
+++ b/index.html
@@ -12,29 +12,31 @@
       padding: 0;
       box-sizing: border-box;
     }
+    html, body {
+      height: 100%;
+    }
     body {
       font-family: 'Arial', sans-serif;
       background-color: #000;
       color: white;
-      overflow: hidden;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
       text-align: center;
       padding: 0 20px;
+      display: flex;
+      flex-direction: column;
     }
     .container {
-      max-width: 900px;
-      width: 100%;
-      padding: 20px;
-      z-index: 10;
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding: 40px 20px 100px;
     }
     .logo-wrapper {
       position: relative;
       width: 300px;
       max-width: 80vw;
-      margin: 0 auto 30px;
+      margin-bottom: 30px;
     }
     .logo-wrapper img {
       width: 100%;
@@ -104,13 +106,12 @@
       100% { opacity: 1; transform: translateY(0); }
     }
     .footer {
-      position: absolute;
-      bottom: 20px;
       font-size: 1.2em;
       color: #777;
       letter-spacing: 1px;
       opacity: 0.6;
       font-weight: 300;
+      padding: 20px;
     }
     @media (max-width: 480px) {
       .brand-name {
