--- a/index.html
+++ b/index.html
@@ -21,22 +21,18 @@
       color: white;
       text-align: center;
       padding: 0 20px;
-      display: flex;
-      flex-direction: column;
     }
     .container {
-      flex: 1;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      padding: 40px 20px 100px;
+      max-width: 900px;
+      width: 100%;
+      margin: 0 auto;
+      padding: 40px 20px 120px; /* Bottom padding added to prevent footer overlap */
     }
     .logo-wrapper {
       position: relative;
       width: 300px;
       max-width: 80vw;
-      margin-bottom: 30px;
+      margin: 0 auto 30px;
     }
     .logo-wrapper img {
       width: 100%;
@@ -112,22 +108,23 @@
       opacity: 0.6;
       font-weight: 300;
       padding: 20px;
+      text-align: center;
     }
-    @media (max-width: 480px) {
+    @media (max-width: 768px) {
       .brand-name {
         font-size: 4em;
         letter-spacing: 2px;
       }
       .subtitle {
-        font-size: 1.1em;
-        margin-bottom: 15px;
+        font-size: 1.2em;
+        margin-bottom: 20px;
       }
       .countdown {
-        font-size: 1.7em;
-        padding: 10px 18px;
+        font-size: 1.8em;
+        padding: 15px 20px;
       }
       .footer {
-        font-size: 0.9em;
+        font-size: 1em;
       }
     }
   </style>
