--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     }
     html, body {
       height: 100%;
+      width: 100%;
     }
     body {
       font-family: 'Arial', sans-serif;
@@ -22,6 +23,7 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+      align-items: center;
       text-align: center;
       padding: 10px;
     }
@@ -34,9 +36,9 @@
     }
     .logo-wrapper {
       position: relative;
-      width: 180px;
-      max-width: 60vw;
-      margin-bottom: 20px;
+      width: 140px;
+      max-width: 50vw;
+      margin-bottom: 10px;
     }
     .logo-wrapper img {
       width: 100%;
@@ -65,9 +67,9 @@
       100% { left: 125%; }
     }
     .brand-name {
-      font-size: 2.8em;
+      font-size: 2.2em;
       font-weight: 800;
-      letter-spacing: 3px;
+      letter-spacing: 2px;
       text-transform: uppercase;
       margin-bottom: 10px;
       background: linear-gradient(90deg, #FF0000, #FFFFFF, #FF0000);
@@ -83,36 +85,36 @@
       100% { background-position: 0% center; }
     }
     .subtitle {
-      font-size: 1em;
+      font-size: 0.95em;
       font-weight: 300;
       color: #ccc;
-      margin-bottom: 20px;
+      margin-bottom: 15px;
       opacity: 0.9;
       animation: fadeIn 1.5s ease-in-out 0.5s;
-      padding: 0 10px;
+      padding: 0 5px;
     }
     .countdown {
-      font-size: 1.4em;
+      font-size: 1.2em;
       font-weight: 600;
       background: rgba(255, 255, 255, 0.1);
-      padding: 10px 20px;
-      border-radius: 8px;
+      padding: 10px 15px;
+      border-radius: 6px;
       box-shadow: 0 0 10px rgba(255, 0, 0, 0.3);
       color: #FF0000;
       animation: fadeIn 1.5s ease-in-out 1s;
-      margin-bottom: 20px;
+      margin-bottom: 10px;
     }
     @keyframes fadeIn {
-      0% { opacity: 0; transform: translateY(30px); }
+      0% { opacity: 0; transform: translateY(20px); }
       100% { opacity: 1; transform: translateY(0); }
     }
     .footer {
-      font-size: 0.9em;
+      font-size: 0.8em;
       color: #777;
       letter-spacing: 1px;
       opacity: 0.6;
       font-weight: 300;
-      padding: 10px 0;
+      padding: 5px 0;
     }
   </style>
 </head>
